
= ruote-amqp


== ruote-amqp - 2.3.0.1    released 2012/09/10

- pin amqp to 0.9.7 and eventmachine to 0.12.10


== ruote-amqp - 2.3.0    released 2012/09/02

- complete rework to better adhere to the AMQP philosophy


== ruote-amqp - 2.2.0    released 2011/03/01

- receiver : exposing #decode_workitem for overwriting
- options[:queue] patch by Mario Camou
- :durable path by belucid
- 1 MQ per dispatch thread 'leak' fix. Thanks weifeng365
- RuoteAMQP::Participant --> RuoteAMQP::ParticipantProxy


== 2.0.0 not released

* Compatible with ruote 2.0
  * Thanks to John Mettraux (http://github.com/jmettraux/ruote-amqp)
  * Thanks to Jason & Jordan (http://github.com/asm/ruote-amqp)
  * Thanks to Charles Magid (http://github.com/ChasManRors/ruote-amqp)

== 0.9.21.1 2009-08-03

* Switch to using persistent AMQP messages by default

== 0.9.21 2009-07-13

* Depend on ruote-0.9.21 for flexible JSON backends
* Support for default queues
* Support for mapping participant names to queue names
* Plenty of RDOC fixed

== 0.9.20 2009-07-13

* 1 major enhancement:
  * Initial release
